# detect_car_number

./: .gitignore  README.md  requirements.txt  이전_프로젝트_분석.md
detect_car_number/: __init__.py  detector.py  main.py  ocr_service.py  pipeline.py  settings.py
model/: custom.yaml
yolov5/: __init__.py  detect.py  pyproject.toml  requirements.txt  setup.cfg
yolov5/models/: common.py  experimental.py
yolov5/utils/: augmentations.py  dataloaders.py  general.py  metrics.py  plots.py  torch_utils.py
